--- a/Proyecto Definitivo/ProyectoDefinitivo/App.config
+++ b/Proyecto Definitivo/ProyectoDefinitivo/App.config
@@ -9,6 +9,9 @@
         <add name="ProyectoDefinitivo.My.MySettings.InventoryConnectionString1"
             connectionString="Data Source=PABLOPORRAS-PC;Initial Catalog=Inventory;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="ProyectoDefinitivo.My.MySettings.InventoryConnectionString2"
+            connectionString="Data Source=SP-LA-LAB6-10;Initial Catalog=Inventory;User ID=sa;Password=123456"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
